testsuite/bsc.bsv05/dups/SubstructDupFields.bsv
typedef union tagged {
    struct { Bool f; int f; } T;
} U deriving (Bits, Eq);

